# ChangeLog for kde-base/korganizer
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/korganizer/ChangeLog,v 1.53 2006/09/18 15:19:21 carlo Exp $

*korganizer-3.5.4-r1 (18 Sep 2006)

  18 Sep 2006; Carsten Lohrke <carlo@gentoo.org>
  +korganizer-3.5.4-r1.ebuild:
  Fix a crash condition, timezone detection, minor issues.

  17 Sep 2006; Carsten Lohrke <carlo@gentoo.org> -korganizer-3.4.3.ebuild:
  Drop KDE 3.4.

  07 Sep 2006; Diego Pettenò <flameeyes@gentoo.org>
  korganizer-3.5.4.ebuild:
  Add ~x86-fbsd keyword.

  03 Sep 2006; Bryan Østergaard <kloeri@gentoo.org>
  korganizer-3.5.2.ebuild:
  Stable on ia64.

*korganizer-3.5.4 (25 Jul 2006)

  25 Jul 2006; Diego Pettenò <flameeyes@gentoo.org>
  +korganizer-3.5.4.ebuild:
  Bump to 3.5.4 (pre-release).

*korganizer-3.5.3 (01 Jun 2006)

  01 Jun 2006; Diego Pettenò <flameeyes@gentoo.org>
  +korganizer-3.5.3.ebuild:
  Update to new release.

  01 Jun 2006; Thomas Cort <tcort@gentoo.org> korganizer-3.5.2.ebuild:
  Stable on alpha wrt Bug #132213.

  29 May 2006; Jason Wever <weeve@gentoo.org> korganizer-3.5.2.ebuild:
  Stable on SPARC wrt bug #132213.

  29 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  -korganizer-3.4.1.ebuild, -korganizer-3.4.2.ebuild:
  Drop old versions.

  26 May 2006; Markus Rothe <corsair@gentoo.org> korganizer-3.5.2.ebuild:
  Stable on ppc64

  26 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  korganizer-3.5.2.ebuild:
  Stable on amd64 wrt bug #132213

  25 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  korganizer-3.5.2.ebuild:
  Stable on x86 wrt bug #132213

  27 Apr 2006; Marien Zwart <marienz@gentoo.org>
  files/digest-korganizer-3.4.1, files/digest-korganizer-3.4.2,
  files/digest-korganizer-3.4.3, Manifest:
  Fixing SHA256 digest, pass four

  05 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  -korganizer-3.5.0.ebuild, -korganizer-3.5.1.ebuild:
  Removed old 3.5.0/3.5.1 packages.
