@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/libkcal/libkcal-3.5.3.ebuild,v 1.1 2006/06/01 20:47:25 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/libkcal/libkcal-3.5.3.ebuild,v 1.2 2006/09/24 20:02:39 flameeyes Exp $
 
 KMNAME=kdepim
 MAXKDEVER=$PV
@@ -11,8 +11,8 @@ DESCRIPTION="KDE kcal library for korganizer etc"
 KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~ppc64 ~sparc ~x86"
 IUSE=""
 
-DEPEND="
-$(deprange $PV $MAXKDEVER kde-base/ktnef)"
+DEPEND="$(deprange $PV $MAXKDEVER kde-base/ktnef)"
+RDEPEND="${DEPEND}"
 
 KMCOPYLIB="libktnef ktnef/lib"
 KMEXTRACTONLY="libkdepim/email.h"
