@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/libkcal
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/libkcal/ChangeLog,v 1.56 2006/09/17 22:53:04 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/libkcal/ChangeLog,v 1.57 2006/09/24 20:02:39 flameeyes Exp $
+
+  24 Sep 2006; Diego Pettenò <flameeyes@gentoo.org>
+  libkcal-3.5.2-r1.ebuild, libkcal-3.5.3.ebuild, libkcal-3.5.4.ebuild:
+  Fix DEPEND/RDEPEND.
 
   17 Sep 2006; Carsten Lohrke <carlo@gentoo.org> -libkcal-3.4.3.ebuild:
   Drop KDE 3.4.
