@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/korganizer
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/korganizer/ChangeLog,v 1.53 2006/09/18 15:19:21 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/korganizer/ChangeLog,v 1.54 2006/09/24 20:01:11 flameeyes Exp $
+
+  24 Sep 2006; Diego Pettenò <flameeyes@gentoo.org>
+  korganizer-3.5.2.ebuild, korganizer-3.5.3.ebuild, korganizer-3.5.4.ebuild,
+  korganizer-3.5.4-r1.ebuild:
+  Fix DEPEND/RDEPEND.
 
 *korganizer-3.5.4-r1 (18 Sep 2006)
 
